syntax = "proto2";

package NCB.NIdl;

enum EColumnType {
    CT_UNKNOWN      = 0;
    CT_NUMERIC      = 1;
    CT_LABEL        = 2;
    CT_WEIGHT       = 3;
    CT_GROUP_WEIGHT = 4;
    CT_BASELINE     = 5;
    CT_SUBGROUP_ID  = 6;
    CT_DOCUMENT_ID  = 7;
    CT_GROUP_ID     = 8;
    CT_CATEGORICAL  = 9;
    CT_SPARSE       = 10;
    CT_TIMESTAMP    = 11;
    CT_PREDICTION   = 12;
    CT_AUXILIARY    = 13;
}

message TPoolMetainfo {
    map<uint32, EColumnType> ColumnIndexToType = 1;
    optional uint64 DocumentCount              = 2;
    repeated uint32 IgnoredColumnIndices       = 3;
}
